# GPortal-Integrations

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
api/: Cargo.toml
api/src/: lib.rs  models.rs
integration/: Cargo.toml
integration/src/: discord.rs  gportal_auth.rs  gportal_donations.rs  logging.rs  main.rs  openid.rs
