[package]
name = "api"
version = "0.1.0"
authors = ["Razer2015 <razer138@gmail.com>"]
description = "Library for accessing the GPortal API"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"

chrono = "0.4"
chrono-tz = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.64" }
serde-aux = { version = "2.2.0" }
anyhow = { version = "1.0" }
http = { version = "0.2.4" }
currency_rs = { version = "1.1.2" }
regex = { version = "1.6.0" }

# Logging
log = "0.4"
